# opencv-carcassone

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clang-format  hough.cpp  hough1.cpp  run.sh  run2.sh  valgrun.sh
include/Carcassonne/: IBoard.h  Tiles.h
include/Carcassonne/Game/: Board.h
include/Clasters/: Clasters.h  HDBSCANwrapper.h
include/Clusters/: Clusters.h  Displayer.h
include/Colors/: BagOfWords.h  ClassifyHOG.h  Colors.h  image_split.py
include/HDBSCAN_CPP/Distance/: EuclideanDistance.hpp  IDistanceCalculator.hpp  ManhattanDistance.hpp
include/HDBSCAN_CPP/Hdbscan/: hdbscan.hpp
include/HDBSCAN_CPP/HdbscanStar/: cluster.hpp  hdbscanAlgorithm.hpp  hdbscanConstraint.hpp  outlierScore.hpp  undirectedGraph.hpp
include/HDBSCAN_CPP/Runner/: hdbscanParameters.hpp  hdbscanResult.hpp  hdbscanRunner.hpp
include/HDBSCAN_CPP/Utils/: bitSet.hpp
include/Homography/: Homography.h
include/Hough/: Clasters.h  Hough.h  Line.h  Lines.h  Point.h  Square.h  Squares.h  Utils.h
include/Utils/: display.h  rgb2hsv.h
src/Carcassonne/Game/: Board.cpp  CMakeLists.txt
src/Colors/: CMakeLists.txt  Colors.cpp
src/HDBSCAN_CPP/: CMakeLists.txt
src/HDBSCAN_CPP/Distance/: EuclideanDistance.cpp  IDistanceCalculator.cpp  ManhattanDistance.cpp
src/HDBSCAN_CPP/Hdbscan/: hdbscan.cpp
src/HDBSCAN_CPP/HdbscanStar/: cluster.cpp  hdbscanAlgorithm.cpp  hdbscanConstraint.cpp  outlierScore.cpp  undirectedGraph.cpp
src/HDBSCAN_CPP/Runner/: hdbscanParameters.cpp  hdbscanResult.cpp  hdbscanRunner.cpp
src/HDBSCAN_CPP/Utils/: bitSet.cpp
src/Homography/: CMakeLists.txt  Homography.cpp
src/Hough/: CMakeLists.txt  Hough.cpp
src/Test/: CMakeLists.txt
src/main/: CMakeLists.txt  kmeans.cpp  main.cpp  main_old.cpp  tests.cpp  watershed.cpp
test/: main.cpp
