cmake_minimum_required(VERSION 3.9)
set(CMAKE_CXX_STANDARD 20)
# set(CMAKE_BUILD_TYPE Debug)
add_compile_options(-fconcepts)
set(BUILD_GMOCK OFF)
project( TWM )
find_package( OpenCV REQUIRED )
add_subdirectory(deps/gtest)
add_subdirectory(deps/mb)
add_subdirectory(deps/fmt)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_compile_options(-fconcepts)

include_directories(include)

add_subdirectory(src/Carcassonne/Game)
add_subdirectory(src/Colors)
add_subdirectory(src/Homography)
add_subdirectory(src/main)