cmake_minimum_required(VERSION 3.9)
set(CMAKE_CXX_STANDARD 20)
# set(CMAKE_CXX_FLAGS -O3)
# set(CMAKE_BUILD_TYPE Debug)
set(BUILD_GMOCK OFF)
project( TWM )
find_package( OpenCV REQUIRED )
find_package(PythonLibs REQUIRED)
find_package(Python2 COMPONENTS Interpreter NumPy)

include_directories(${PYTHON_INCLUDE_DIRS})
# include_directories("/usr/local/lib/python3.5/dist-packages/numpy/core/include")

add_subdirectory(deps/gtest)
add_subdirectory(deps/mb)
add_subdirectory(deps/fmt)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_compile_options(-fconcepts)

set(CMAKE_THREAD_LIBS_INIT "-lpthread")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
set(CMAKE_HAVE_THREADS_LIBRARY 1)
set(CMAKE_USE_WIN32_THREADS_INIT 0)
set(CMAKE_USE_PTHREADS_INIT 1)
set(THREADS_PREFER_PTHREAD_FLAG ON)

include_directories(include)

add_subdirectory(src/Carcassonne/Game)
add_subdirectory(src/Colors)
add_subdirectory(src/Homography)
add_subdirectory(src/HDBSCAN_CPP)
add_subdirectory(src/main)